--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,18 @@ plugins:
 markdown: kramdown
 mathjax: true
 
+# Aux links for the upper right navigation
+aux_links:
+  "VBLab on GitHub":
+    - "//github.com/VBayesLab/Tutorial-on-VB"
+
+# Makes Aux links open in a new tab. Default is false
+aux_links_new_tab: true
+
+# Back to top link
+back_to_top: true
+back_to_top_text: "Back to top"
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
